--- a/task1_2.html
+++ b/task1_2.html
@@ -24,12 +24,19 @@ For each task, show a webpage containing:
 <body>
     <h1><i class="far fa-calendar-check"></i> To-Do: </h1>
     <div id="tasks">
-        <div id="add_task">
+        <div class="task" id="task_1">
+            <div class="round">
+                <input type="checkbox" class="add_checkbox" id="check2">
+                <label for="check2"></label>
+            </div>
+            <input type="text" class="task_text" id="task1">
+        </div>
+        <div class="task" id="add_task">
             <div class="round">
                 <input type="checkbox" class="add_checkbox" id="check">
                 <label for="check"></label>
             </div>
-            <input type="text" id="add_field" placeholder="add new task">
+            <input type="text" class="task_text" id="add_field" placeholder="add new task">
         </div>
     </div>
 </body>
