--- a/task3_1.html
+++ b/task3_1.html
@@ -31,6 +31,20 @@ For each task, show a webpage containing:
             </div>
             <input type="text" class="task_text" id="task1" value="Buy new John Grisham book">
         </div>
+        <div class="task" id="task_2">
+            <div class="reg_round">
+                <input type="checkbox" class="reg_checkbox" id="check2">
+                <label for="check2"></label>
+            </div>
+            <input type="text" class="task_text" id="task1" value="Eat Lunch">
+        </div>
+        <div class="task" id="task_3">
+            <div class="reg_round">
+                <input type="checkbox" class="reg_checkbox" id="check2">
+                <label for="check2"></label>
+            </div>
+            <input type="text" class="task_text" id="task1" value="Call Mom">
+        </div>
         <div class="task" id="add_task">
             <div class="add_round">
                 <input type="checkbox" class="add_checkbox" id="check">
